# desktop-security-center

./: .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  apparmor-prompting.proto  bootstrap-vm.sh  hello.go  melos.yaml  prompt-loop.sh  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_prompts.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  ci.yml  cla.yaml  flutter.yaml  rust.yml  snap.yaml
aa-prompt-client/: Cargo.toml  build.rs
aa-prompt-client/resources/filter-serialize-tests/: some_constraints.json
aa-prompt-client/resources/prompt-sequence-tests/: e2e_erroring_write_test.json  e2e_write_test.json  e2e_wrong_path_test.json  simple_sequence.json
aa-prompt-client/src/: cli_actions.rs  lib.rs  main.rs  prompt_sequence.rs  recording.rs  snapd_client.rs  socket_client.rs  util.rs
aa-prompt-client/src/cli_actions/: echo_loop.rs  listen_for_target.rs  listener.rs  mod.rs
aa-prompt-client/src/daemon/: mod.rs  poll.rs  server.rs  worker.rs
aa-prompt-client/src/protos/: apparmor_prompting.rs  mod.rs
aa-prompt-client/src/snapd_client/: mod.rs  prompt.rs
aa-prompt-client/src/snapd_client/interfaces/: home.rs  mod.rs
aa-prompt-client/tests/: integration.rs
aa_prompt_ui/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
aa_prompt_ui/lib/: main.dart  prompt_data_model.dart  prompt_page.dart
aa_prompt_ui/linux/: CMakeLists.txt  my_application.cc
aa_prompt_ui/test/: widget_test.dart
apparmor_prompt/: pubspec.yaml
apparmor_prompt/lib/: main.dart  prompt_data_model.dart  prompt_page.dart
apparmor_prompt/linux/: CMakeLists.txt  my_application.cc
assets/: security-center.desktop
docs/: adding-support-for-new-interfaces.md  running-the-scripted-client.md
flutter_packages/apparmor_prompt/: .gitignore  pubspec.yaml
flutter_packages/apparmor_prompt/integration_test/: apparmor_prompt_test.dart
flutter_packages/apparmor_prompt/lib/: fake_apparmor_prompting_client.dart  l10n_x.dart  main.dart  prompt_data_model.dart  prompt_model.dart  prompt_page.dart  test_prompt_details.json
flutter_packages/apparmor_prompt/test/: home_prompt_page_test.dart  prompt_page_test.dart  test_utils.dart
flutter_packages/apparmor_prompting_client/: analysis_options.yaml  pubspec.yaml
flutter_packages/apparmor_prompting_client/lib/: apparmor_prompting_client.dart
flutter_packages/prompting_client/: pubspec.yaml
flutter_packages/prompting_client_ui/: pubspec.yaml
flutter_packages/security_center/: .gitignore  pubspec.yaml
hwctl/: hwctl.sh
integration_test/: security_center_test.dart
lib/: main.dart  navigator.dart  routes.dart  security_center_app.dart
lib/app_permissions/: app_rules_page.dart  interfaces_page.dart  rules_providers.dart  snap_metadata_providers.dart  snaps_page.dart
lib/l10n/: app_en.arb
lib/rules/: snap_rules_page.dart
lib/services/: app_permissions_service.dart  fake_app_permissions_service.dart  fake_rules_service.dart  rules_service.dart  snapd_app_permissions_service.dart  snapd_rules_service.dart  snapd_service.dart
lib/widgets/: tile_list.dart
linux/: my_application.cc
prompting-client/: Cargo.toml
prompting-client/resources/filter-serialize-tests/: all_fields_home.json  no_constraints.json  some_constraints.json
prompting-client/resources/prompt-sequence-tests/: e2e_erroring_write_test.json  e2e_unexpected_additional_prompt_test.json  e2e_write_test.json  e2e_wrong_path_test.json  simple_sequence.json
prompting-client/src/: lib.rs  prompt_sequence.rs  recording.rs
prompting-client/src/cli_actions/: echo_loop.rs
prompting-client/src/daemon/: mod.rs  poll.rs  server.rs  worker.rs
prompting-client/src/protos/: apparmor_prompting.rs
prompting-client/src/snapd_client/: mod.rs  prompt.rs
prompting-client/src/snapd_client/interfaces/: home.rs  mod.rs
prompting-client/tests/: integration.rs
protos/: apparmor-prompting.proto
scripts/: create-nested.sh  create.sh  import_app_title_to_desktop_flie.py  read-nested.sh  read.sh
scripts/fvm/: install.sh
security_center/lib/: pages.dart
snap/: snapcraft.yaml
snap/gui/: desktop-security-center.desktop
test/: test_utils.dart  test_utils.mocks.dart
test/app_permissions/: app_rules_page_test.dart  interfaces_page_test.dart  snaps_page_test.dart
test/services/: snapd_app_permissions_service_test.dart
testing-snap/scripts/: create-single.sh
testing-snap/snap/: snapcraft.yaml
(+68 files in other folders)
