[package]
name = "aa-prompt-client"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
chrono = "0.4.38"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.4", features = ["http1", "tokio", "client-legacy"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
simple_test_case = "1.2.0"
