[package]
name = "aa-prompt-client"
version = "0.1.0"
edition = "2021"
default-run = "aa-prompt-client"

[profile.release]
strip = true
lto = true

[[bin]]
name = "aa-prompt-client"
path = "src/bin/cli.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.4", features = ["http1", "tokio", "client-legacy"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["io-util", "macros", "net", "signal", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.1.1"
simple_test_case = "1.2.0"
tokio = { version = "1.37.0", features = ["process"] }
uuid = { version = "1.8.0", features = ["v4"] }
