[package]
name = "aa-prompt-client"
version = "0.1.0"
edition = "2021"
default-run = "aa-prompt-client"

[profile.release]
strip = true
lto = true

[[bin]]
name = "aa-prompt-client"
path = "src/bin/cli.rs"

[[bin]]
name = "aa-prompt-daemon"
path = "src/bin/daemon.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.4", features = ["http1", "tokio", "client-legacy"] }
hyper = { version = "1.3.1", features = ["client", "http1"] }
prost = "0.13.1"
prost-types = "0.13.1"
regex = "1.10.5"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
tokio-stream = "0.1.15"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "process", "signal", "rt-multi-thread"] }
tonic = "0.12.0"
tonic-reflection = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.1.1"
simple_test_case = "1.2.0"
tokio = { version = "1.37.0", features = ["process"] }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.12.0", features = ["prost"] }
